// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BreadCrumbItems /> should render multiple items with slash in between them 1`] = `
[
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL lcYpuI"
  >
    <div
      className="sc-bcXGCL lcYpuI"
    >
      <a
        className="sc-bcXGCL fOGmNq cap-link"
        href="/projects"
      >
        Project list
      </a>
      <span
        className="sc-bcXGCL hlIIDU cap-text"
      >
        /
      </span>
    </div>
    <div
      className="sc-bcXGCL lcYpuI"
    >
      <p
        className="sc-bcXGCL hHORdi cap-text"
      >
        New Project
      </p>
    </div>
  </div>,
]
`;

exports[`<BreadCrumbItems /> should render one single item 1`] = `
[
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL lcYpuI"
  >
    <div
      className="sc-bcXGCL lcYpuI"
    >
      <p
        className="sc-bcXGCL hHORdi cap-text"
      >
        Project list
      </p>
    </div>
  </div>,
]
`;
